# pyNexafs

./: .gitignore  .pre-commit-config.yaml  .pylintrc  .readthedocs.yaml  LICENSE  README.md  README.md.old  README.rst  pyproject.toml  requirements.txt  setup.py
.github/: pyNexafs-gui.spec
.github/workflows/: distcheck.yml  docs.yml  linting.yml  publish.yml.old  pyinst.yml  pylint.yml  release.yml  semver.yml  test.yml  tests.yml
docs/: CHANGELOG.rst  api.rst  conf.py  index.rst  install.rst  support.rst
docs/examples/: example_MEX2.ipynb
docs/source/: api.rst  examples.rst  gui.rst  index.rst  install.rst  support.rst
docs/source/_static/: index.css
docs/source/tutorials/: MDA.rst  MEX2.rst  index.rst
pyNexafs/: __init__.py  __main__.py  resources.py  types.py
pyNexafs/gui/: __init__.py  app.py  browser2.py  config.py  data_browser.py  data_converter.py  qant_converter.py
pyNexafs/gui/icons/: normalisation.pdn  normalisation2_dark.pdn  normalisation2_light.pdn
pyNexafs/gui/widgets/: __init__.py  converter.py  fileloader.py  normaliser.py  normaliser.py.old  reducer.py  reduction.py  viewer.py
pyNexafs/gui/widgets/fitting/: nexafs_fits.py
pyNexafs/gui/widgets/graphing/: __init__.py  hyperspy_graphs.py  mpl_graphs.py  plotly_graphs.py
pyNexafs/gui/widgets/graphing/matplotlib/: graphs.py  styling.py  widgets.py
pyNexafs/gui/widgets/io/: __init__.py  dir_selection.py  fileviewer.py  selection.py
pyNexafs/gui/widgets/io/parser_ui/: __init__.py  parser_table.py
pyNexafs/nexafs/: __init__.py  scan.py  scan_normalised.py
pyNexafs/nexafs/fitting/: functions.py
pyNexafs/nexafs/normalisation/: __init__.py  norm_settings.py  scan_normalised.py
pyNexafs/parsers/: __init__.py  _base.py  aus.py  australia.py  base.py  generic.py
pyNexafs/parsers/au/: __init__.py  aus_sync.py
pyNexafs/parsers/au/aus_sync/: MEX1.py  MEX1_relabels.py  MEX2.py  MEX2_relabels.py  MEX_detectors.py  SXR.py  __init__.py
pyNexafs/utils/: __init__.py  decorators.py  functions.py  mda.py  reduction.py  sizes.py
tests/: conftest.py  test_parser_base.py  test_scan.py  test_types_and_decorators.py
tests/gui/: fixtures.py
tests/gui/io/: __init__.py  test_parser_table.py  test_selection.py
tests/parsers/: test_parser_base.py  test_parser_generic.py  test_parser_paramsdict.py  test_parser_relabelsdict.py  test_parser_summaryparamslist.py
tests/parsers/au/: test_parser_au-MEX2.py  test_parser_au-SXR.py
tests/test_data/au/MEX1/: MEX1_40747_processed.asc  MEX1_40747_processed.xdi
tests/test_data/au/MEX2/2024-03/: MEX2_5640_processed.xdi  MEX2_5641.mda  MEX2_5641_processed.xdi  MEX2_5642_processed.xdi  MEX2_5643_processed.xdi
tests/test_data/au/MEX2/2025-03/: MEX2_13261_processed.xdi  MEX2_13366.mda  MEX2_13366_processed.xdi  MEX2_13367_processed.xdi  MEX2_13385_processed.xdi  MEX2_13386_processed.xdi
tests/test_data/au/SXR/: sxr129598.mda  sxr129930.asc  sxr129930.mda  sxr129931.asc  sxr129931.mda  sxr129932.asc  sxr129932.mda  sxr129933.asc  sxr129933.mda  sxr129934.asc  sxr129934.mda
tests/test_data/au/SXR/2024-03/: sxr129577.asc  sxr129577.mda  sxr129578.asc  sxr129578.mda  sxr129582.asc  sxr129582.mda  sxr129598.asc
