
#######################################################
################  Build configurations  ###############
#######################################################

[build-system]
    requires = [
        "setuptools-scm >= 6.4.2", # For versioning
        "setuptools >= 61.2.0", # Minimum version for pyproject.toml support
        "uv >= 0.7.20" # Current version as of 2025-July
    ]
    build-backend = "setuptools.build_meta"

[project]
    # Project information
    name = "pyNexafs"
    version = "0.1.0-rc.1"
    description = "A package for processing and analysing NEXAFS data."
    readme = "README.md"
    license = {file = "LICENSE"}
    keywords = ["NEXAFS", "XANES", "Near", "Edge", "X-ray", "Absorption", "Fine", "Structure", "Spectroscopy", "Optical Data", "XAS", "Synchrotron"]
    authors = [
        {name = "Matthew Gebert", email="matthew.gebert@monash.edu"},
        ]
    maintainers = [
        {name = "Matthew Gebert", email="matthew.gebert@monash.edu"},
    ]

    # Project compatibility:
    requires-python = ">=3.11"
    dependencies = [
        "numpy",
        "overrides", # for type hinting
        "scipy",
        "xdrlib3", # function bindings for reading binary data from mda files
    ]

[project.urls]
    # Website, documentation and other continuous integration URLS.
    code = "https://github.com/xraysoftmat/pyNexafs"
    documentation = "https://pyNexafs.readthedocs.io/en/latest/"

[dependency-groups]
# Dependency groups for optional dependencies. Requires pip >= 25.1
dev = [
    {include-group = "gui"}, # Include GUI dependencies in dev
    {include-group = "docs"}, # Include documentation dependencies in dev
    "pre-commit",
    "pytest",
    "python-semantic-release",
    "commitizen",
    "commitlint",
    "periodictable >= 2.0.2", # Due to changes in neutron element as zeroth element.
    "black",
    "numpydoc",
    "ruff",
]

docs = [
    "sphinx",
    "sphinx_pyproject", # to include conf.py information in pyproject.toml
    "intersphinx-registry", # to reference other projects in sphinx
    # "sphinx-rtd-theme",
    "pydata-sphinx-theme",
    "myst-parser", # For parsing md files in sphinx
    "numpydoc",
    "sphinx-copybutton", # Add a copybutton to code blocks
    # "sphinx-autoapi", # Automatically generate API documentation instead of using autodoc/autosummary extensions.
    "matplotlib"
]

gui = [
    "matplotlib",
    "pandas",
    "pyqt6",
    "pyyaml",
]

[tool.setuptools.packages.find]
exclude = ["docs*", "tests*"]

#######################################################
#############  Pre-commit configurations  #############
#######################################################

## Linting
# Ruff
[tool.ruff] # Same as Black formatting.
line-length = 88
indent-width = 4

[tool.ruff.format] # Same as Black formatting.
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# NumpyDoc
[tool.numpydoc_validation]
    checks = [
        "all",   # report on all checks, except the below
        "EX01",
        "SA01",
        "ES01",
        "GL08", # TODO: ignore docstring check until numpydoc 1.9.0 is released (where constructors are supported).
        "PR02", # TODO: ignore parameter check until numpydoc 1.9.0 is released (where properties setter methods are supported).
    ]

    exclude = [
        '^tests*$',
        '.*/gui/.*',
    ]

    override_SS05 = [
        "^Process",
        "^Nexafs",
        "^Xanes",
        "^Xas",
        "",
    ]

## Semantic Versioning / Conventional Commits
# Commitizen
[tool.commitizen]
name = "cz_conventional_commits"
version_files = ["pyproject.toml:project.version"]
# version_provider = "pep621" #equivalent to version_files description

# Commitlint


# Python-Sem-Ver
[tool.semantic_release.branches.main]
match = "(main|master)"
prerelease_token = "rc"
prerelease = false

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
# build_command = "python -m build --sdist --wheel ."
commit_parser = "conventional"
build_command = "pip install uv && uv build --sdist --wheel . --out-dir dist"
commit_message = """
chore(release): Release `core@{version}` [skip ci]
Automatically generated by python-semantic-release
"""
allow_zero_version = true

[tool.semantic_release.branches.beta]
# Matches branches with the prefixes 'feat/', 'fix/', or 'perf/'.
match = "^(feat|fix|perf)/.+"
prerelease = true
prerelease_token = "beta"

[tool.semantic_release.changelog.default_templates]
changelog_file = "docs/CHANGELOG.rst"
output_format = "rst" # or "md" for Markdown format

[tool.semantic_release.changelog]
# Recommended patterns for conventional commits parser that is scope aware
exclude_commit_patterns = [
    '''chore(?:\([^)]*?\))?: .+''',
    '''ci(?:\([^)]*?\))?: .+''',
    '''refactor(?:\([^)]*?\))?: .+''',
    '''style(?:\([^)]*?\))?: .+''',
    '''test(?:\([^)]*?\))?: .+''',
    '''build\((?!deps\): .+)''',
    '''Initial [Cc]ommit.*''',
]

[tool.semantic_release.commit_parser_options]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]
# other_allowed_tags = ["build", "chore", "ci", "docs", "style", "refactor", "test"]
# allowed_tags = ["feat", "fix", "perf", "build", "chore", "ci", "docs", "style", "refactor", "test"]
# default_bump_level = 0
parse_squash_commits = true
ignore_merge_commits = true

#######################################################
#############  Sphinx Doc configurations  #############
#######################################################

[tool.sphinx-pyproject]
html_theme = "pydata_sphinx_theme"

[tool.sphinx-pyproject.html_theme_options]
    # ...
    navbar_start = ["navbar-logo"]
    navbar_center = ["navbar-nav"]
    navbar_end = ["theme-switcher", "navbar-icon-links"]
    navbar_persistent = ["search-button"]
    navbar_align = "content"
    show_nav_level = 2
    navigation_depth = 4
    # ...
    secondary_sidebar_items = ["page-toc", "edit-this-page", "sourcelink"]
    # ...
    article_footer_items = []
    #...
    footer_start = ["copyright", "sphinx-version"]
    footer_end = ["theme-version"]
    #...
    show_prev_next = true

# Array item:
[[tool.sphinx-pyproject.html_theme_options.icon_links]]
    name = "GitHub"
    url = "https://github.com/numpy/numpydoc"
    icon = "fab fa-github-square"
    type = "fontawesome"

[tool.sphinx-pyproject.html_sidebars]
  "**" = []

[tool.sphinx-pyproject.html_context]
    default_mode = "light"
    default_dark_mode = false
    default_language = "en"
    default_version = "latest"
    display_github = true
    github_user = "xraysoftmat"
    github_repo = "pyNexafs"
    github_version = "main"
    doc_path = "docs"

# Esbonio Sphinx extension for VS Code integration - https://docs.esbon.io
[tool.esbonio.sphinx]
    buildCommand = ["sphinx-build", "-M", "dirhtml", "./docs", "./docs/_build"]
    pythonCommand = ["${venv:pyNexafs}"]
